# FlowStim

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: MeshData.h  MeshGL.h  ShaderGL.h  Simulation.h  Simulation2D.h  SimulationGL.h
App/resources/: shaders.qrc
App/resources/shaders/: fragment.shader  vertex.shader  vertexTest.shader
App/resources/stylesheets/: mainStyle.qss
App/src/: MeshGL.cpp  ShaderGL.cpp  Simulation.cpp  Simulation2D.cpp  SimulationGL.cpp  main.cpp
AppQML/: CMakeLists.txt
AppQML/include/AppQML/: QBuffers.h  QFlowRenderer.h  QFlowSolver.h
AppQML/resources/: qml.qrc
AppQML/resources/styles/: main.qml
AppQML/src/: QFlowRenderer.cpp  QFlowSolver.cpp  main.cpp
Core/benchmark/: CMakeLists.txt  main_benchmark.cpp
Core/benchmark/Domain_Benchmark/: Mesh2dStructuredFactory_Benchmark.cpp
Core/benchmark/Solver_Benchmark/: Case2dCavityFlow_Benchmark.cpp  JacobiScalarMethod_Benchmark.cpp  JacobiVectorMethod_Benchmark.cpp
Core/include/Core/Case/: Case2dCavityFlowFactory.h  Case2dCouetteFlowFactory.h  Case2dStructuredFactory.h  CaseFactory.h  CaseStructured2dFactory.h
Core/include/Core/Domain/: Cell.h  Compass.h  CompassUtils.h  Face.h  FaceSetFactory.h  GridProfile.h  GridProfileEquidistant.h  Mesh.h  Mesh2dStructuredFactory.h  MeshDomainData.h  MeshFactory 2.h  MeshFactory.h  MeshFactory2dStructured.h  Vertex.h  VertexMapping.h
Core/include/Core/Field/: BcType.h  Divergence.h  EulerExplicit.h  FIeldRelaxation.h  FaceFlux.h  Field.h  FieldEquation.h  FieldTolerance.h  Initialise.h  Laplacian.h  PressureLinear.h
Core/include/Core/Solver/: BurgersSolver.h  Courant.h  ExplicitIterator.h  ExplicitMethod.h  FaceGradients.h  FaceValues.h  JacobiMethod.h  JacobiScalarMethod.h  JacobiVectorMethod.h  LaplaceSolver.h  PisoSolver.h  PointMethod.h  PressureExplicit.h  RhieChow.h  SolverBase.h  Tolerance.h
Core/include/Core/Utils/: Rectangle.h
Core/profile/: CMakeLists.txt  main_profile.cpp
Core/src/: CMakeLists.txt
Core/src/Case/: CMakeLists.txt  Case2dCavityFlowFactory.cpp  Case2dCouetteFlowFactory.cpp  Case2dStructuredFactory.cpp  CaseFactory.cpp  CaseStructured2dFactory.cpp
Core/src/Domain/: CMakeLists.txt  Cell.cpp  CompassUtils.cpp  Face.cpp  FaceSetFactory.cpp  GridProfile.cpp  GridProfileEquidistant.cpp  Mesh.cpp  Mesh2dStructuredFactory.cpp  MeshFactory.cpp  MeshFactory2dStructured.cpp  Vertex.cpp  VertexMapping.cpp
Core/src/Field/: CMakeLists.txt  Divergence.cpp  EulerExplicit.cpp  FaceFlux.cpp  Field.cpp  FieldEquation.cpp  FieldRelaxation.cpp  FieldTolerance.cpp  Initialise.cpp  Laplacian.cpp  PressureLinear.cpp
Core/src/Solver/: BurgersSolver.cpp  CMakeLists.txt  Courant.cpp  ExplicitIterator.cpp  ExplicitMethod.cpp  FaceGradients.cpp  FaceValues.cpp  JacobiMethod.cpp  JacobiScalarMethod.cpp  JacobiVectorMethod.cpp  LaplaceSolver.cpp  PisoSolver.cpp  PointMethod.cpp  PressureExplicit.cpp  RhieChow.cpp  SolverBase.cpp
Core/test/: CMakeLists.txt
Core/test/Domain_Test/: CMakeLists.txt  Mesh2dStructuredFactory_Test.cpp  MeshFactory2dStructured_Test.cpp  MeshFactory_Test.cpp
Core/test/Field_Test/: CMakeLists.txt  FieldRelaxation_Test.cpp  FieldTolerance_Test.cpp  Field_Test.cpp
Core/test/Solver_Test/: CMakeLists.txt  FaceGradients_Test.cpp  FaceValues_Test.cpp  JacobiScalarMethod_Test.cpp  JacobiVectorMethod_Test.cpp
